2012-05-01  Roland McGrath  <roland@hack.frob.com>

	* scripts/check-textrel.awk: New file.
	* elf/Makefile ($(objpfx)check-textrel): Target removed.
	(check-textrel-CFLAGS): Variable removed.
	(all-built-dso): Use := to define.o
	($(all-built-dso:=.dyn)): New static pattern rule.
	(generated): Add those targets.
	($(objpfx)check-textrel.out): Use the script on the .dyn files.
	* config.make.in (READELF): New substituted variable.
	* elf/check-textrel.c: File removed.

2012-05-01  Joseph Myers  <joseph@codesourcery.com>

	* conform/data/assert.h-data [ISO || ISO99 || ISO11] (*_t): Do not
	allow.
	* conform/data/ctype.h-data [C99-based standards] (isblank):
	Expect function.
	(is*): Change to is[abcdefghijklmnopqrstuvwxyz]*.
	(to*): Change to to[abcdefghijklmnopqrstuvwxyz]*.
	[ISO || ISO99 || ISO11] (*_t): Do not allow.
	* conform/data/errno.h-data (EDOM): Use macro-int-constant.
	Specify type.  Require positive value.
	(EILSEQ): Likewise.
	(ERANGE): Likewise.
	[ISO || POSIX] (EILSEQ): Do not expect.
	[!ISO && !ISO99 && !ISO11] (E2BIG): Use macro-int-constant.
	Specify type.  Require positive value.
	[!ISO && !ISO99 && !ISO11] (EACCES): Likewise.
	[!ISO && !ISO99 && !ISO11] (EADDRINUSE): Likewise.
	[!ISO && !ISO99 && !ISO11] (EADDRNOTAVAIL): Likewise.
	[!ISO && !ISO99 && !ISO11] (EAFNOSUPPORT): Likewise.
	[!ISO && !ISO99 && !ISO11] (EAGAIN): Likewise.
	[!ISO && !ISO99 && !ISO11] (EALREADY): Likewise.
	[!ISO && !ISO99 && !ISO11] (EBADF): Likewise.
	[!ISO && !ISO99 && !ISO11] (EBADMSG): Likewise.
	[!ISO && !ISO99 && !ISO11] (EBUSY): Likewise.
	[!ISO && !ISO99 && !ISO11] (ECANCELED): Likewise.
	[!ISO && !ISO99 && !ISO11] (ECHILD): Likewise.
	[!ISO && !ISO99 && !ISO11] (ECONNABORTED): Likewise.
	[!ISO && !ISO99 && !ISO11] (ECONNREFUSED): Likewise.
	[!ISO && !ISO99 && !ISO11] (ECONNRESET): Likewise.
	[!ISO && !ISO99 && !ISO11] (EDEADLK): Likewise.
	[!ISO && !ISO99 && !ISO11] (EDESTADDRREQ): Likewise.
	[!ISO && !ISO99 && !ISO11] (EDQUOT): Likewise.