@@ -1,5 +1,15 @@
 2012-05-01  Roland McGrath  <roland@hack.frob.com>
 
+	* scripts/check-execstack.awk: New file.
+	* elf/Makefile ($(objpfx)check-execstack): Target removed.
+	(check-execstack-CFLAGS): Variable removed.
+	($(objpfx)check-execstack.h): Target removed.
+	($(objpfx)execstack-default): New target.
+	(generated): Add that instead of check-execstack.h.
+	($(all-built-dso:=.phdr)): New static pattern rule.
+	(generated): Add those targets.
+	* elf/check-execstack.c: File removed.
+
 	* scripts/check-textrel.awk: New file.
 	* elf/Makefile ($(objpfx)check-textrel): Target removed.
 	(check-textrel-CFLAGS): Variable removed.
